@@ -1,5 +1,11 @@
 <div class="main-container">
   <div class="container-fluid pb-5">
+    <div *ngIf="!shop?.isPublished" class="pt-3">
+      <div class="alert alert-info font-9 mb-0">
+        Page is not published currently.<br/>
+        You may click <a href="javascript:void(0)" (click)="publishPage()" class="font-weight-bold">here</a> to show to public once your page is ready.
+      </div>
+    </div>
     <div class="row no-gutters w-100 position-relative">
       <span *ngIf="isMobileSize" class="text-center clickable"
         style="line-height: 47px; vertical-align: middle; border-bottom: 1px solid #e5e5e5"
