@@ -4,6 +4,7 @@
     padding: .5rem;
     border-radius: 0 0 5px 5px;
     z-index: 99;
+    top: 40px;
 }
 
 @media (max-width: 992px) {
