@@ -319,30 +319,37 @@
     <div class="settings-header">
         <h4 class="ws-subtitle mb-3">Advanced</h4>
         <button class="btn btn-expand float-right" (click)="isAdvancedExpanded = !isAdvancedExpanded">Expand</button>
-        <p>Perform advanced options such as removing your shop.</p>
+        <p>Perform advanced options such as unpublishing, quit or removing your page.</p>
         <div [@expand]="'down'" *ngIf="isAdvancedExpanded" style="height: 100%">
-            <form *ngIf="isAdminAuthorized" class="mb-3">
+            <form *ngIf="isAdminAuthorized" class="mb-4">
+                <p *ngIf="shop?.isPublished" class="alert alert-secondary ws-bg-light-grey-4 mb-1" style="font-size: .9rem">
+                    <button class="btn btn-primary btn-sm m-0 mb-2" (click)="isConfirmUnpublishedModalOpened = true">Unpublish Page</button>
+                    <br />
+                    Unpublished page will not be shown to public.
+                    <br />
+                    You can unpublish your page to do maintenance.
+                </p>
                 <p *ngIf="shop?.status?.status == 'closed' && timeDifference > 0" class="alert alert-secondary ws-bg-light-grey-4 mb-1" style="font-size: .9rem">
                     <button *ngIf="shop.status.status == 'closed' && timeDifference > 0" class="btn btn-primary btn-sm m-0 mb-2" (click)="isConfirmReactivateModalOpened = true">Reactivate</button>
                     <br />
-                    Shop will be removed permanently <span class="text-danger font-weight-bold">{{timeDifferenceString}}</span>.
+                    Page will be removed permanently <span class="text-danger font-weight-bold">{{timeDifferenceString}}</span>.
                     <br />
-                    You can reactivate anytime before shop is removed permanently.
+                    You can reactivate anytime before page is removed permanently.
                 </p>
                 <p *ngIf="shop?.status?.status != 'closed'" class="alert alert-secondary ws-bg-light-grey-4 mb-1" style="font-size: .9rem">
                     <button *ngIf="shop.status.status != 'closed'" class="btn btn-sm btn-danger m-0 mb-2" (click)="isConfirmCloseShopModalOpened = true">Remove
-                        Shop Permanently</button>
+                        Page Permanently</button>
                     <br />
-                    You can reactivate shop within 1 hour.<br>
-                    Shop will not be displayed to public.</p>
+                    You can reactivate page within 1 hour.<br>
+                    Page will not be displayed to public.</p>
             </form>
 
             <form class="mb-3">
                 <p class="alert alert-secondary ws-bg-light-grey-4 mb-1" style="font-size: .9rem">
-                    <button class="btn btn-warning btn-sm m-0 mb-2" (click)="isConfirmQuitShopModalOpened = true">Leave Shop</button>
+                    <button class="btn btn-warning btn-sm m-0 mb-2" (click)="isConfirmQuitShopModalOpened = true">Leave Page</button>
                     <br />
-                    All contributors can leave the shop.<br />
-                    At least 1 admin should be in the shop.
+                    All contributors can leave the page.<br />
+                    At least 1 admin should be in the page.
                 </p>
             </form>
         </div>
@@ -354,9 +361,10 @@
     </div> -->
 </div>
 <edit-contributor-modal *ngIf="isEditContributorModalOpened" [contributorController]="contributorController" [(isOpened)]="isEditContributorModalOpened" id="editModal"></edit-contributor-modal>
-<confirm-modal *ngIf="isConfirmCloseShopModalOpened" [(isOpened)]="isConfirmCloseShopModalOpened" id="confirmCloseShopModal" [message]="'Are you sure to close the shop permanently?'" [action]="closePermanently.bind(this)"></confirm-modal>
-<confirm-modal *ngIf="isConfirmReactivateModalOpened" [(isOpened)]="isConfirmReactivateModalOpened" id="confirmReactivateModal" [message]="'Are you sure to reactivate the shop?'" [action]="reactivateFromInactive.bind(this)"></confirm-modal>
-<confirm-modal *ngIf="isConfirmQuitShopModalOpened" [(isOpened)]="isConfirmQuitShopModalOpened" id="confirmQuitShopModal" [message]="'Are you sure to quit the shop?'" [action]="quitShop.bind(this)">
+<confirm-modal *ngIf="isConfirmUnpublishedModalOpened" [(isOpened)]="isConfirmUnpublishedModalOpened" [loading]="isUnpublishLoading.isRunning()" id="confirmUnpublishShopModal" [message]="'Are you sure to unpublish the page?'" [action]="unpublishPage.bind(this)"></confirm-modal>
+<confirm-modal *ngIf="isConfirmCloseShopModalOpened" [(isOpened)]="isConfirmCloseShopModalOpened" id="confirmCloseShopModal" [message]="'Are you sure to close the page permanently?'" [action]="closePermanently.bind(this)"></confirm-modal>
+<confirm-modal *ngIf="isConfirmReactivateModalOpened" [(isOpened)]="isConfirmReactivateModalOpened" id="confirmReactivateModal" [message]="'Are you sure to reactivate the page?'" [action]="reactivateFromInactive.bind(this)"></confirm-modal>
+<confirm-modal *ngIf="isConfirmQuitShopModalOpened" [(isOpened)]="isConfirmQuitShopModalOpened" id="confirmQuitShopModal" [message]="'Are you sure to quit the page?'" [action]="quitShop.bind(this)">
 </confirm-modal>
 
 <ws-modal *ngIf="isProfileUploaderOpened" [isCloseIconDisplayed]="false" [(isOpened)]="isProfileUploaderOpened" [maxWidth]="400">
