@@ -56,6 +56,7 @@ export class AboutComponent implements OnInit {
   isShopClosable: boolean;
   element: string;
   loading: WsLoading = new WsLoading;
+  isUnpublishLoading: WsLoading = new WsLoading;
   refreshLoading: WsLoading = new WsLoading;
   address: Address = new Address;
   timetable: Timetable = new Timetable;
@@ -91,6 +92,7 @@ export class AboutComponent implements OnInit {
   bannerImageFile;
   previewImage;
   croppieObj;
+  isConfirmUnpublishedModalOpened: boolean;
   isConfirmCloseShopModalOpened: boolean;
   isConfirmReactivateModalOpened: boolean;
   isConfirmQuitShopModalOpened: boolean;
@@ -454,6 +456,19 @@ export class AboutComponent implements OnInit {
       }, err => {
         WsToastService.toastSubject.next({ content: err.error, type: 'danger' });
       })
+  }
+  unpublishPage() {
+    this.isUnpublishLoading.start();
+    this.authShopAdminService.unpublishPage()
+    .pipe(takeUntil(this.ngUnsubscribe), finalize(() => this.isUnpublishLoading.stop()))
+    .subscribe(result => {
+      this.shop.isPublished = false;
+      this.sharedShopService.shop.next(this.shop);
+      this.isConfirmUnpublishedModalOpened = false;
+      WsToastService.toastSubject.next({ content: result['message'], type: 'success' });
+    }, err => {
+      WsToastService.toastSubject.next({ content: err.error, type: 'danger' });
+    });
   }
   openEditContributorModal(contributor) {
     this.isEditContributorModalOpened = true;
