@@ -4,7 +4,7 @@
   #toast-container {
     right: 80px;
     top: 30px;
-    z-index: 2000;
+    z-index: 10000;
 
     .toast {
       max-width: inherit;
