@@ -212,6 +212,8 @@ export class AuthShopAdminUrl {
     static inviteContributorUrl = URL.AUTH_SHOP_ADMIN_URL + '/contributor/invite';
     static editContributorUrl = URL.AUTH_SHOP_ADMIN_URL + '/contributor/edit';
     static removeContributorUrl = URL.AUTH_SHOP_ADMIN_URL + '/contributor/remove';
+    static publishPageUrl = URL.AUTH_SHOP_ADMIN_URL + '/publish';
+    static unpublishPageUrl = URL.AUTH_SHOP_ADMIN_URL + '/unpublish';
     static closePermanentlyUrl = URL.AUTH_SHOP_ADMIN_URL + '/close/permanently';
     static reactivateShopUrl = URL.AUTH_SHOP_ADMIN_URL + '/reactivate';
 }
